# polin-huang.github.io

./: .README.md.swp  .gitignore  README.md
docs/: index.md
docs/cmake/: 01-Single-main.md  02-multiple-src-files.md  03-multiple-dir-files.md  04-organized-src-flies.md  05-generate-lib.md  06-link-lib.md  07-compile-options.md  README.md
docs/cpp/BackgroundKnowledge/001-Type-Variables/: Variables.md
docs/cpp/BackgroundKnowledge/002-Flow-Control/: Flow-control.md
docs/cpp/BackgroundKnowledge/003-Functions/: Functions.md
docs/cpp/BackgroundKnowledge/004-Pointer-Reference-DynamicMemory/: Pointer_Reference_DynamicMemory.md
docs/cpp/BackgroundKnowledge/005-Date/: Date.md
docs/cpp/Boost/coroutine/: CMakeLists.txt  build.py  main_pull_push.cpp  main_push_pull.cpp
docs/cpp/Events/libev/: CMakeLists.txt  async.cpp  fd-listener.cpp  io-signal-timeout.cpp
docs/cpp/Events/libhv/: CMakeLists.txt  README.md  asyncClient.cpp  server.cpp  syncClient.cpp
docs/cpp/Socket/ChatRoom/: Client.cpp  (+4 more)
docs/development/: cpp.md  python3.md  vim.md
docs/finance/: QuantDevTimeSheet_v8(1).xlsx  SwaptionVol-Reconcile.xlsx
docs/finance/QauntLibDoc/: dima-boost-intro.pdfZone.Identifier  dima-code.zipZone.Identifier  dima-ql-intro-1.pdfZone.Identifier
docs/finance/QuantLibDoc/: dima-ql-intro-2.pdfZone.Identifier
docs/finance/Repo货币工具类线性产品/: EQ货币工具类线性产品模型验证报告_v1.4.docx
docs/finance/利率和固定收益类线性产品/: EQ利率和固定收益类线性产品模型验证报告_v1.6.docx
docs/finance/商品类线性产品/: EQ商品类线性产品模型验证报告_v1.5.docx
docs/finance/外汇类线性产品/: EQ外汇线性产品模型验证报告_v1.2.docx
docs/linux/: GithubHosts.md  Vim.md
docs/project/QuantModule/: ClassDiagram.md  Flowchart.md  MindMap.md
docs/project/QuantSystem/: Client.md  SystemArchitecture.md
docs/sql/: sqlgrammar.md
(+33 files in other folders)
